# ICA-Scraper

./: .gitignore  .replit  CookieAccept.lua  ParseJSONFile.py  README.md  TestLinks.json  main.py  pyproject.toml  replit.nix  spider.py
ICA_Scraper/: scrapy.cfg
ICA_Scraper/ICA_Scraper/: CoopScraper.py  ICAScraper.py  ParseJSONFile.py  main.py  middlewares.py  settings.py  testingSelenium.py
Main/: CoopScraper.py  ICAScraper.py  images.py  main.py  oldUI.py  testhighlight.py  testingSpacy.py
