[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
requests = "^2.28.1"
Scrapy = "^2.7.0"
colorama = "^0.4.6"
Pillow = "^9.5.0"
PySimpleGUI = "^4.60.4"
textwrap3 = "^0.9.2"
scrapy-splash = "0.9.0"
selenium = "4.9.0"
webdriver-manager = "^3.8.6"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"